# CQXQ

./: .gitignore  CMakeLists.txt  README.md  app_id.txt  vcpkg-requirements.txt
CQXQ/: CQPluginLoader.cpp  CQPluginLoader.h  CQTools.cpp  CQTools.h  CQXQ.cppcheck  EncodingConvert.cpp  EncodingConvert.h  ErrorHandler.cpp  ErrorHandler.h  GUI.cpp  GUI.h  GlobalVar.cpp  GlobalVar.h  Resource.rc  RichMessage.cpp  RichMessage.h  Unpack.cpp  Unpack.h  XQAPI.h  native.cpp  native.h  native.vcxproj  native.vcxproj.filters  packages.config  resource.h
dummyCQP/: native.cpp  native.h  native.sln  native.vcxproj  native.vcxproj.filters
scripts/: build.ps1  clean.ps1  generate.ps1  helpers.ps1  post_build.ps1  prepare.ps1  vcpkg.ps1
